[package]
name = "times"
version = "1.0.15"
authors = ["Libor Spacek"]
edition = "2021"
description = "Timing Benchmark, Repeated Runs, with Statistics"
readme = "README.md"
homepage = "https://github.com/liborty/times"
repository = "https://github.com/liborty/times"
license = "BSD-3-Clause"
keywords = ["statistics","median"]
categories = ["development-tools","development-tools::profiling","rust-patterns","algorithms","science"]
include = [
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dependencies]
indxvec = "1.8"
ran = "2.0"
medians = "3.0"
